All components for global reporting dashboard created. Layout has to be changed. Gauge chart has to be changed too

--- a/src/bootstrap/styles/themes.scss
+++ b/src/bootstrap/styles/themes.scss
@@ -7,10 +7,8 @@
 // let's make it blue-ish instead of the default white color
 $nb-themes: nb-register-theme(
 	(
-		color-bg: #4ca6ff,
-		shadow: 0 1px 2px 0 #3780c0,
-		layout-bg: #ffffff,
-		color-fg: #222222
+		sidebar-width: 14em,
+		layout-min-height: 1000px
 	),
 	dark,
 	dark
