Layout global reporting dashboard

--- a/src/sass/overrides/ng2.scss
+++ b/src/sass/overrides/ng2.scss
@@ -6,4 +6,12 @@
 	table tr:nth-child(even) td {
 		color: black !important;
 	}
+
+	table tr th a {
+		font-size: 10pt !important;
+	}
+
+	table tr > td {
+		font-size: 9pt !important;
+	}
 }
