--- a/src/features/global-reporting/category/components/category-table-client/category-table-client.component.html
+++ b/src/features/global-reporting/category/components/category-table-client/category-table-client.component.html
@@ -4,6 +4,6 @@
 	</nb-layout-header>
 
 	<nb-layout-column>
-		<app-smart-table [settings]="settings" [source]="source"></app-smart-table>
+		<app-smart-table [settings]="settings" [source]="source" [hasPager]="true"></app-smart-table>
 	</nb-layout-column>
 </nb-layout>
