--- a/src/features/global-reporting/category/components/category-table/category-table.component.html
+++ b/src/features/global-reporting/category/components/category-table/category-table.component.html
@@ -1,1 +1,1 @@
-<app-smart-table [settings]="settings" [source]="source"></app-smart-table>
+<app-smart-table [settings]="settings" [source]="source" [hasPager]="true"></app-smart-table>
