--- a/src/bootstrap/styles/themes.scss
+++ b/src/bootstrap/styles/themes.scss
@@ -1,7 +1,7 @@
 // import Nebular Theme System and the default theme
 @import '~@nebular/theme/styles/theming';
 @import '~@nebular/theme/styles/themes/dark';
-@import '~bootstrap/dist/css/bootstrap.min.css';
+@import '~bootstrap/dist/css/bootstrap.css';
 
 // and change the variables you need,
 // or simply leave the map empty to use the default values
