--- a/src/features/global-reporting/smart-table/components/smart-table.component.html
+++ b/src/features/global-reporting/smart-table/components/smart-table.component.html
@@ -11,6 +11,10 @@
 	</div>
 
 	<div gdArea="table">
-		<ng2-smart-table [settings]="settings" [source]="source"></ng2-smart-table>
+		<ng2-smart-table
+			[settings]="settings"
+			[source]="source"
+			(userRowSelect)="onRowSelect($event)"
+		></ng2-smart-table>
 	</div>
 </div>
