--- a/src/features/global-reporting/dashboard/components/performance-gauge-chart/performance-gauge-chart.component.html
+++ b/src/features/global-reporting/dashboard/components/performance-gauge-chart/performance-gauge-chart.component.html
@@ -1,8 +1,8 @@
 <div>
 	<canvas
 		baseChart
-		width="100"
-		height="60"
+		width="100%"
+		height="100%"
 		[data]="performanceChartData"
 		[labels]="performanceChartLabels"
 		[chartType]="performanceChartType"
