--- a/src/features/global-reporting/dashboard/components/signatures-line-chart/signatures-line-chart.component.html
+++ b/src/features/global-reporting/dashboard/components/signatures-line-chart/signatures-line-chart.component.html
@@ -1,8 +1,8 @@
 <div>
 	<canvas
 		baseChart
-		width="600"
-		height="300"
+		width="100%"
+		height="100%"
 		[chartType]="lineChartType"
 		[datasets]="lineChartData"
 		[labels]="lineChartLabels"
