--- a/src/bootstrap/styles/main.scss
+++ b/src/bootstrap/styles/main.scss
@@ -1,7 +1,7 @@
-@import '../../sass/overrides/overrides';
 @import '../../sass/components/components';
 @import '../../sass/fonts/fonts';
 @import '../../sass/overrides/overrides';
+@import '../../sass/pages/pages';
 @import '../../sass/variables/variables';
 
 // this is your created themes.scss file, make sure the path to the file is correct
