Global colors changed for corporate theme + menu color changed

--- a/src/sass/overrides/nebular.scss
+++ b/src/sass/overrides/nebular.scss
@@ -1,12 +1,12 @@
-.nb-theme-dark a {
+.nb-theme-corporate a {
 	color: white !important;
 }
 
-.nb-theme-dark [nbButton].appearance-ghost.status-primary {
+.nb-theme-corporate [nbButton].appearance-ghost.status-primary {
 	color: white !important;
 }
 
-.nb-theme-dark nb-search-field .search input {
+.nb-theme-corporate nb-search-field .search input {
 	border-bottom: 1px solid white !important;
 }
 
