--- a/src/bootstrap/styles/themes.scss
+++ b/src/bootstrap/styles/themes.scss
@@ -1,6 +1,6 @@
 // import Nebular Theme System and the default theme
 @import '~@nebular/theme/styles/theming';
-@import '~@nebular/theme/styles/themes/dark';
+@import '~@nebular/theme/styles/themes/corporate';
 @import '~bootstrap/dist/css/bootstrap.css';
 
 // and change the variables you need,
@@ -10,10 +10,15 @@ $nb-themes: nb-register-theme(
 	(
 		sidebar-width: 14em,
 		layout-min-width: 1000px,
-		card-margin-bottom: 0
+		card-margin-bottom: 0,
+		sidebar-background-color: #00467f,
+		menu-background-color: #00467f,
+		font-main: Roboto,
+		font-secondary: Exo,
+		menu-item-hover-background-color: #00465a
 	),
-	dark,
-	dark
+	corporate,
+	corporate
 ); // let's leave it as default
 
 @include nb-install-component() {
@@ -28,7 +33,6 @@ $nb-themes: nb-register-theme(
 
 			div {
 				text-align: center;
-				background-color: nb-theme(color-bg-active);
 				padding: 0.75rem 0.25rem;
 				border-radius: 0.25rem;
 			}
