logo universign added on the header (clickable) + package-lock deleted from the git

--- a/src/app/pages/layouts/main/main.layout.html
+++ b/src/app/pages/layouts/main/main.layout.html
@@ -1,5 +1,9 @@
 <nb-layout>
-	<nb-layout-header fixed>{{title}}</nb-layout-header>
+	<nb-layout-header fixed>
+		<a href="/">
+			<img src="assets/pictures/universign-logo.png" />
+		</a>
+	</nb-layout-header>
 	<nb-sidebar>
 		<nb-menu [items]="items"> </nb-menu>
 	</nb-sidebar>
