Renaming signatures to products

--- a/src/sass/pages/global-reporting.scss
+++ b/src/sass/pages/global-reporting.scss
@@ -8,7 +8,7 @@
 				grid-template-columns: 100% !important;
 				grid-template-rows: auto auto auto !important;
 
-				& .overview_signatures {
+				& .overview_products {
 					grid-column-start: 1 !important;
 					grid-column-end: 2 !important;
 					grid-row-start: 3 !important;
