Universign Colors added to the project overview chart

--- a/src/app/components/projects-overview-chart/projects-overview-chart.component.html
+++ b/src/app/components/projects-overview-chart/projects-overview-chart.component.html
@@ -9,6 +9,7 @@
 			[legend]="legend"
 			[labels]="labels"
 			[datasets]="datasets"
+			[colors]="colors"
 			[options]="options"
 		>
 		</canvas>
