fix: service-products

--- a/src/app/components/products-chart/products-chart.component.html
+++ b/src/app/components/products-chart/products-chart.component.html
@@ -9,12 +9,13 @@
 			[legend]="legend"
 			[labels]="labels"
 			[datasets]="datasets"
+			[colors]="colors"
 			[options]="options"
 		>
 		</canvas>
 	</div>
+</ng-template>
 
-	<ng-template #noData>
-		<div class="w-100 h-100"></div>
-	</ng-template>
+<ng-template #noData>
+	<div class="w-100 h-100"></div>
 </ng-template>
