--- a/src/app/components/tickets-chart/tickets-chart.component.html
+++ b/src/app/components/tickets-chart/tickets-chart.component.html
@@ -1,12 +1,21 @@
-<div class="w-100 h-100">
-	<canvas
-		baseChart
-		height="100%"
-		[chartType]="ticketsChartType"
-		[legend]="ticketsChartLegend"
-		[labels]="ticketsChartLabels"
-		[datasets]="ticketsChartData"
-		[options]="ticketsChartOptions"
-	>
-	</canvas>
-</div>
+<ng-container *ngIf="areDataAvailable; then displayData; else noData"> </ng-container>
+
+<ng-template #displayData>
+	<div class="w-100 h-100">
+		<canvas
+			baseChart
+			height="100%"
+			[chartType]="chartType"
+			[legend]="legend"
+			[labels]="labels"
+			[datasets]="datasets"
+			[colors]="colors"
+			[options]="options"
+		>
+		</canvas>
+	</div>
+</ng-template>
+
+<ng-template #noData>
+	<div class="w-100 h-100"></div>
+</ng-template>
