Timeline charts is now always displayed. We need to fix this later

--- a/src/app/components/projects-timeline-chart/projects-timeline-chart.component.html
+++ b/src/app/components/projects-timeline-chart/projects-timeline-chart.component.html
@@ -1,3 +1,9 @@
+<ng-container *ngIf="areDataAvailable; then displayData; else noData"> </ng-container>
+
 <div class="w-100 h-100">
 	<div id="projects-timeline-chart"></div>
 </div>
+
+<ng-template #noData>
+	<div class="w-100 h-100"></div>
+</ng-template>
