--- a/src/sass/variables/universign.scss
+++ b/src/sass/variables/universign.scss
@@ -1,8 +1,8 @@
 $universign-min-width: 1000px;
-$universign-menu-width: 12em;
+$universign-menu-width: 18vw;
 
 $universign-font-family: Calibri;
-$universign-menu-font-size: 16px;
+$universign-menu-font-size: 1.5vw;
 $universign-card-font-size: 15px;
 
 $universign-menu-color: #ffffff;
