fix: timeline component html

--- a/src/app/components/projects-timeline-chart/projects-timeline-chart.component.html
+++ b/src/app/components/projects-timeline-chart/projects-timeline-chart.component.html
@@ -1,8 +1,10 @@
 <ng-container *ngIf="areDataAvailable; then displayData; else noData"> </ng-container>
 
-<div class="w-100 h-100">
-	<div id="projects-timeline-chart"></div>
-</div>
+<ng-template #displayData>
+	<div class="w-100 h-100">
+		<div id="projects-timeline-chart"></div>
+	</div>
+</ng-template>
 
 <ng-template #noData>
 	<div class="w-100 h-100"></div>
