--- a/src/app/components/satisfaction-chart/satisfaction-chart.component.html
+++ b/src/app/components/satisfaction-chart/satisfaction-chart.component.html
@@ -1,3 +1,11 @@
-<div class="w-100 h-100">
-	<div id="satisfaction-chart"></div>
-</div>
+<ng-container *ngIf="areDataAvailable; then displayData; else noData"> </ng-container>
+
+<ng-template #displayData>
+	<div class="w-100 h-100">
+		<div id="satisfaction-chart"></div>
+	</div>
+</ng-template>
+
+<ng-template #noData>
+	<div class="w-100 h-100"></div>
+</ng-template>
