Sass variable used for details button background color

--- a/src/sass/variables/universign.scss
+++ b/src/sass/variables/universign.scss
@@ -7,4 +7,5 @@ $universign-card-font-size: 15px;
 
 $universign-menu-color: #ffffff;
 $universign-menu-background-color: #00467f;
+$universign-button-background-color: $universign-menu-background-color;
 $universign-menu-hover: #00465a;
