Sidebar fixed. We need to put some icons when it's compacted

--- a/src/app/pages/layouts/main/main.layout.html
+++ b/src/app/pages/layouts/main/main.layout.html
@@ -4,7 +4,7 @@
 			<img src="assets/pictures/universign-logo.png" />
 		</a>
 	</nb-layout-header>
-	<nb-sidebar>
+	<nb-sidebar responsive compactedBreakpoints="['xs', 'is', 'sm']">
 		<nb-menu [items]="items"> </nb-menu>
 	</nb-sidebar>
 	<nb-layout-column>
