--- a/src/bootstrap/styles/main.scss
+++ b/src/bootstrap/styles/main.scss
@@ -6,9 +6,11 @@
 
 // framework component styles which will use your new theme
 @import '~@nebular/theme/styles/globals';
+@import '~@nebular/auth/styles/all';
 // install the framework
 @include nb-install() {
 	@include nb-theme-global();
+	@include nb-auth-global(); // append the install mixin inside of the nb-install
 }
 
 .content {
