--- a/src/features/authentification/auth/pages/auth.component.scss
+++ b/src/features/authentification/auth/pages/auth.component.scss
@@ -4,8 +4,8 @@
 	$auth-layout-padding: 2.5rem;
 
 	nb-card {
-		margin: 0;
-		height: calc(100vh - 2 * #{$auth-layout-padding});
+		width: 400px;
+		border-radius: 0.5em;
 	}
 
 	.navigation .link {
@@ -33,14 +33,16 @@
 
 	@include media-breakpoint-down(sm) {
 		nb-card {
-			border-radius: 0;
+			border-radius: 0.5em;
 			height: 100vh;
 		}
 	}
 
 	::ng-deep {
 		nb-layout .layout .layout-container .content .columns nb-layout-column {
-			padding: $auth-layout-padding;
+			display: flex;
+			justify-content: center;
+			align-items: center;
 
 			@include media-breakpoint-down(sm) {
 				padding: 0;
