--- a/src/features/authentification/request-password/pages/request-password.component.html
+++ b/src/features/authentification/request-password/pages/request-password.component.html
@@ -1,3 +1,4 @@
+<img class="logo" src="assets/pictures/universign-logo.png" />
 <h1 id="title" class="title">Forgot Password</h1>
 <p class="sub-title">Enter your email address and we’ll send a link to reset your password</p>
 
@@ -28,7 +29,7 @@
 			placeholder="Email address"
 			autofocus
 			fullWidth
-			fieldSize="large"
+			fieldSize="small"
 			[status]="email.dirty ? (email.invalid ? 'danger' : 'success') : ''"
 			[required]="getConfigValue('forms.validation.email.required')"
 			[attr.aria-invalid]="email.invalid && email.touched ? true : null"
