--- a/src/features/authentification/reset-password/pages/reset-password.component.html
+++ b/src/features/authentification/reset-password/pages/reset-password.component.html
@@ -1,3 +1,4 @@
+<img class="logo" src="assets/pictures/universign-logo.png" />
 <h1 id="title" class="title">Change password</h1>
 <p class="sub-title">Please set a new password</p>
 
@@ -29,7 +30,7 @@
 			placeholder="New Password"
 			autofocus
 			fullWidth
-			fieldSize="large"
+			fieldSize="small"
 			[status]="password.dirty ? (password.invalid ? 'danger' : 'success') : ''"
 			[required]="getConfigValue('forms.validation.password.required')"
 			[minlength]="getConfigValue('forms.validation.password.minLength')"
@@ -60,7 +61,7 @@
 			class="last"
 			placeholder="Confirm Password"
 			fullWidth
-			fieldSize="large"
+			fieldSize="small"
 			[status]="rePass.touched ? (rePass.invalid || password.value != rePass.value ? 'danger' : 'success') : ''"
 			[required]="getConfigValue('forms.validation.password.required')"
 			[attr.aria-invalid]="rePass.invalid && rePass.touched ? true : null"
