--- a/src/features/authentification/reset-password/pages/reset-password.component.scss
+++ b/src/features/authentification/reset-password/pages/reset-password.component.scss
@@ -7,4 +7,10 @@
 	.form-group:last-of-type {
 		margin-bottom: 3rem;
 	}
+
+	.logo {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+	}
 }
