Css for auth module changed again. Button and background color

--- a/src/features/global-reporting/dashboard/components/details-button/details-button.component.html
+++ b/src/features/global-reporting/dashboard/components/details-button/details-button.component.html
@@ -1,3 +1,3 @@
-<button type="button" class="btn btn-info btn-sm float-right detailsButton" [routerLink]="routerLink">
+<button type="button" class="btn btn-info btn-sm float-right universignButton" [routerLink]="routerLink">
 	Détails
 </button>
