--- a/src/features/authentification/pages/auth.component.scss
+++ b/src/features/authentification/pages/auth.component.scss
@@ -1,4 +1,4 @@
-@import '~@nebular/theme/styles/global/breakpoints';
+@import '../../../../node_modules/@nebular/theme/styles/global/breakpoints';
 
 :host {
 	$auth-layout-padding: 2.5rem;
@@ -6,6 +6,7 @@
 	nb-card {
 		width: 400px;
 		border-radius: 0.5em;
+		box-shadow: 2px 2px 10px 2px rgba(0, 0, 0, 0.2);
 	}
 
 	.navigation .link {
@@ -43,6 +44,7 @@
 			display: flex;
 			justify-content: center;
 			align-items: center;
+			background-color: white;
 
 			@include media-breakpoint-down(sm) {
 				padding: 0;
