--- a/src/app/pages/layouts/main/main.layout.html
+++ b/src/app/pages/layouts/main/main.layout.html
@@ -1,7 +1,24 @@
-<nb-layout>
+<nb-layout class="main-layout">
 	<nb-layout-header fixed>
 		<a href="/">
 			<img src="assets/pictures/universign-logo.png" />
+		</a>
+		<div class="input-group global-search-bar">
+			<input
+				class="form-control border-secondary py-2"
+				type="search"
+				placeholder="search"
+				[ngbTypeahead]="search"
+			/>
+			<div class="input-group-append">
+				<button class="btn btn-outline-secondary" type="button">
+					<i class="fa fa-search"></i>
+				</button>
+			</div>
+		</div>
+		<a href="auth/logout">
+			<i class="fa fa-sign-out fa-3x" aria-hidden="true"></i>
+			<span>Logout</span>
 		</a>
 	</nb-layout-header>
 	<nb-sidebar responsive compactedBreakpoints="['xs', 'is', 'sm']">
