--- a/src/app/pages/layouts/main/main.layout.html
+++ b/src/app/pages/layouts/main/main.layout.html
@@ -5,13 +5,21 @@
 		</a>
 		<div class="input-group global-search-bar">
 			<input
+				id="typeahead-focus"
+				name="search"
 				class="form-control border-secondary py-2"
-				type="search"
 				placeholder="search"
+				type="text"
+				class="form-control"
+				[(ngModel)]="model"
 				[ngbTypeahead]="search"
+				(focus)="focus$.next($event.target.value)"
+				(click)="click$.next($event.target.value)"
+				#instance="ngbTypeahead"
+				(keyup.enter)="onSubmitGlobalSearch(model)"
 			/>
 			<div class="input-group-append">
-				<button class="btn btn-outline-secondary" type="button">
+				<button class="btn btn-outline-secondary" type="button" (click)="onSubmitGlobalSearch(model)">
 					<i class="fa fa-search"></i>
 				</button>
 			</div>
