--- a/src/sass/pages/_pages.scss
+++ b/src/sass/pages/_pages.scss
@@ -1,3 +1,4 @@
-@import 'customer-reporting';
-@import 'global-reporting';
+@import 'authentification';
+@import 'customer-reporting-dashboard';
+@import 'global-reporting-dashboard';
 @import 'main-layout';
