--- a/src/sass/pages/customer-reporting-dashboard.scss
+++ b/src/sass/pages/customer-reporting-dashboard.scss
@@ -1,4 +1,4 @@
-.customer-reporting {
+.customer-reporting-dashboard {
 	@media only screen and (max-width: 1275px) {
 		grid-template-columns: 100% !important;
 		grid-template-rows: auto auto auto auto auto !important;
