--- a/src/app/pages/layouts/main/main.layout.html
+++ b/src/app/pages/layouts/main/main.layout.html
@@ -1,10 +1,11 @@
 <nb-layout class="main-layout">
 	<nb-layout-header fixed>
-		<a href="/">
+		<div (click)="goToHome()" [ngStyle]="{'cursor': 'pointer'}">
 			<img src="assets/pictures/universign-logo.png" />
-		</a>
+		</div>
 		<div class="input-group global-search-bar">
 			<input
+				#instance="ngbTypeahead"
 				id="typeahead-focus"
 				name="search"
 				class="form-control border-secondary py-2"
@@ -12,10 +13,9 @@
 				type="text"
 				class="form-control"
 				[(ngModel)]="model"
-				[ngbTypeahead]="search"
+				[ngbTypeahead]="onSearch"
 				(focus)="focus$.next($event.target.value)"
 				(click)="click$.next($event.target.value)"
-				#instance="ngbTypeahead"
 				(keyup.enter)="onSubmitGlobalSearch(model)"
 			/>
 			<div class="input-group-append">
@@ -24,14 +24,16 @@
 				</button>
 			</div>
 		</div>
-		<a href="auth/logout">
-			<i class="fa fa-sign-out fa-3x" aria-hidden="true"></i>
-			<span>Logout</span>
-		</a>
+		<div class="logout">
+			<a href="auth/logout">
+				<i class="fa fa-sign-out fa-3x" aria-hidden="true"></i>
+				<span>Déconnexion</span>
+			</a>
+		</div>
 	</nb-layout-header>
-	<nb-sidebar responsive compactedBreakpoints="['xs', 'is', 'sm']">
-		<nb-menu [items]="items"> </nb-menu>
-	</nb-sidebar>
+	<!--<nb-sidebar responsive compactedBreakpoints="['xs', 'is', 'sm']">
+		<nb-menu [items]="navBar"> </nb-menu>
+	</nb-sidebar>-->
 	<nb-layout-column>
 		<router-outlet></router-outlet>
 	</nb-layout-column>
