--- a/src/sass/pages/main-layout.scss
+++ b/src/sass/pages/main-layout.scss
@@ -3,4 +3,12 @@
 		margin-left: 50px;
 		margin-right: 30px;
 	}
+	& .logout {
+		i {
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+			width: 40px;
+		}
+	}
 }
