translate to fr

--- a/src/sass/components/_components.scss
+++ b/src/sass/components/_components.scss
@@ -1,2 +1,6 @@
 @import 'universign-button';
 @import 'four-oh-four';
+@import 'login';
+@import 'register';
+@import 'request-password';
+@import 'reset-password';
