--- a/src/sass/pages/authentification.scss
+++ b/src/sass/pages/authentification.scss
@@ -13,7 +13,7 @@
 		display: inline-block;
 		text-decoration: none;
 
-		nb-icon {
+		& nb-icon {
 			font-size: 2rem;
 			vertical-align: middle;
 		}
