--- a/src/sass/components/login.scss
+++ b/src/sass/components/login.scss
@@ -1,7 +1,7 @@
 @import '~@nebular/theme/styles/global/breakpoints';
 
-:host {
-	.logo {
+.login {
+	& .logo {
 		display: block;
 		margin-left: auto;
 		margin-right: auto;
