modify scss auth

--- a/src/sass/pages/_pages.scss
+++ b/src/sass/pages/_pages.scss
@@ -1,4 +1,4 @@
-@import 'authentification';
+@import 'authentication';
 @import 'customer-reporting-dashboard';
 @import 'global-reporting-dashboard';
 @import 'main-layout';
