--- a/src/features/authentication/logout/pages/logout.component.html
+++ b/src/features/authentication/logout/pages/logout.component.html
@@ -1,1 +1,13 @@
-<div>Déconnexion en cours...</div>
+<div class="authentication">
+	<nb-layout>
+		<nb-layout-column>
+			<nb-card>
+				<nb-card-body>
+					<nb-auth-block>
+						<div>Déconnexion en cours...</div>
+					</nb-auth-block>
+				</nb-card-body>
+			</nb-card>
+		</nb-layout-column>
+	</nb-layout>
+</div>
