--- a/src/features/authentication/reset-password/pages/reset-password.component.html
+++ b/src/features/authentication/reset-password/pages/reset-password.component.html
@@ -1,100 +1,136 @@
-<div class="reset-password">
-	<img class="logo" src="assets/pictures/universign-logo.png" />
-	<h1 id="title" class="title">Changement de mot de passe</h1>
-	<p class="sub-title">Sélectionner un nouveau mot de passe</p>
+<div class="authentication">
+	<nb-layout>
+		<nb-layout-column>
+			<nb-card>
+				<nb-card-body>
+					<nb-auth-block>
+						<div class="reset-password">
+							<img class="logo" src="assets/pictures/universign-logo.png" />
+							<h1 id="title" class="title">Changement de mot de passe</h1>
+							<p class="sub-title">Sélectionner un nouveau mot de passe</p>
 
-	<nb-alert *ngIf="showMessages.error && errors?.length && !submitted" outline="danger" role="alert">
-		<p class="alert-title"><b>Oh snap!</b></p>
-		<ul class="alert-message-list">
-			<li *ngFor="let error of errors; trackBy: trackById" class="alert-message">{{ error }}</li>
-		</ul>
-	</nb-alert>
+							<nb-alert
+								*ngIf="showMessages.error && errors?.length && !submitted"
+								outline="danger"
+								role="alert"
+							>
+								<p class="alert-title"><b>Oh snap!</b></p>
+								<ul class="alert-message-list">
+									<li *ngFor="let error of errors; trackBy: trackById" class="alert-message">
+										{{ error }}
+									</li>
+								</ul>
+							</nb-alert>
 
-	<nb-alert *ngIf="showMessages.success && messages?.length && !submitted" outline="success" role="alert">
-		<p class="alert-title"><b>Hooray!</b></p>
-		<ul class="alert-message-list">
-			<li *ngFor="let message of messages; trackBy: trackById" class="alert-message">{{ message }}</li>
-		</ul>
-	</nb-alert>
+							<nb-alert
+								*ngIf="showMessages.success && messages?.length && !submitted"
+								outline="success"
+								role="alert"
+							>
+								<p class="alert-title"><b>Hooray!</b></p>
+								<ul class="alert-message-list">
+									<li *ngFor="let message of messages; trackBy: trackById" class="alert-message">
+										{{ message }}
+									</li>
+								</ul>
+							</nb-alert>
 
-	<form (ngSubmit)="resetPass()" #resetPassForm="ngForm" aria-labelledby="title">
-		<div class="form-control-group">
-			<label class="label" for="input-password">Nouveau mot de passe :</label>
-			<input
-				nbInput
-				[(ngModel)]="user.password"
-				#password="ngModel"
-				type="password"
-				id="input-password"
-				name="password"
-				class="first"
-				placeholder="Mot de passe"
-				autofocus
-				fullWidth
-				fieldSize="small"
-				[status]="password.dirty ? (password.invalid ? 'danger' : 'success') : ''"
-				[required]="getConfigValue('forms.validation.password.required')"
-				[minlength]="getConfigValue('forms.validation.password.minLength')"
-				[maxlength]="getConfigValue('forms.validation.password.maxLength')"
-				[attr.aria-invalid]="password.invalid && password.touched ? true : null"
-			/>
-			<ng-container *ngIf="password.invalid && password.touched">
-				<p class="caption status-danger" *ngIf="password.errors?.required">
-					Mot de passe requis!
-				</p>
-				<p class="caption status-danger" *ngIf="password.errors?.minlength || password.errors?.maxlength">
-					Le mot de passe doit faire une longueur comprise entre
-					{{ getConfigValue('forms.validation.password.minLength') }} et
-					{{ getConfigValue('forms.validation.password.maxLength') }}
-					caractères
-				</p>
-			</ng-container>
-		</div>
+							<form (ngSubmit)="resetPass()" #resetPassForm="ngForm" aria-labelledby="title">
+								<div class="form-control-group">
+									<label class="label" for="input-password">Nouveau mot de passe :</label>
+									<input
+										nbInput
+										[(ngModel)]="user.password"
+										#password="ngModel"
+										type="password"
+										id="input-password"
+										name="password"
+										class="first"
+										placeholder="Mot de passe"
+										autofocus
+										fullWidth
+										fieldSize="small"
+										[status]="password.dirty ? (password.invalid ? 'danger' : 'success') : ''"
+										[required]="getConfigValue('forms.validation.password.required')"
+										[minlength]="getConfigValue('forms.validation.password.minLength')"
+										[maxlength]="getConfigValue('forms.validation.password.maxLength')"
+										[attr.aria-invalid]="password.invalid && password.touched ? true : null"
+									/>
+									<ng-container *ngIf="password.invalid && password.touched">
+										<p class="caption status-danger" *ngIf="password.errors?.required">
+											Mot de passe requis!
+										</p>
+										<p
+											class="caption status-danger"
+											*ngIf="password.errors?.minlength || password.errors?.maxlength"
+										>
+											Le mot de passe doit faire une longueur comprise entre
+											{{ getConfigValue('forms.validation.password.minLength') }} et
+											{{ getConfigValue('forms.validation.password.maxLength') }}
+											caractères
+										</p>
+									</ng-container>
+								</div>
 
-		<div class="form-group">
-			<label class="label" for="input-re-password">Confirmation du mot de passe :</label>
-			<input
-				nbInput
-				[(ngModel)]="user.confirmPassword"
-				#rePass="ngModel"
-				id="input-re-password"
-				name="rePass"
-				type="password"
-				class="last"
-				placeholder="Confirmer mot de passe"
-				fullWidth
-				fieldSize="small"
-				[status]="
-					rePass.touched ? (rePass.invalid || password.value != rePass.value ? 'danger' : 'success') : ''
-				"
-				[required]="getConfigValue('forms.validation.password.required')"
-				[attr.aria-invalid]="rePass.invalid && rePass.touched ? true : null"
-			/>
-			<ng-container *ngIf="rePass.touched">
-				<p class="caption status-danger" *ngIf="rePass.invalid && rePass.errors?.required">
-					Confirmation du mot de passe requis!
-				</p>
-				<p class="caption status-danger" *ngIf="password.value != rePass.value && !rePass.errors?.required">
-					Les mots de passe saisis ne correspondent pas.
-				</p>
-			</ng-container>
-		</div>
+								<div class="form-group">
+									<label class="label" for="input-re-password">Confirmation du mot de passe :</label>
+									<input
+										nbInput
+										[(ngModel)]="user.confirmPassword"
+										#rePass="ngModel"
+										id="input-re-password"
+										name="rePass"
+										type="password"
+										class="last"
+										placeholder="Confirmer mot de passe"
+										fullWidth
+										fieldSize="small"
+										[status]="
+											rePass.touched
+												? rePass.invalid || password.value != rePass.value
+													? 'danger'
+													: 'success'
+												: ''
+										"
+										[required]="getConfigValue('forms.validation.password.required')"
+										[attr.aria-invalid]="rePass.invalid && rePass.touched ? true : null"
+									/>
+									<ng-container *ngIf="rePass.touched">
+										<p
+											class="caption status-danger"
+											*ngIf="rePass.invalid && rePass.errors?.required"
+										>
+											Confirmation du mot de passe requis!
+										</p>
+										<p
+											class="caption status-danger"
+											*ngIf="password.value != rePass.value && !rePass.errors?.required"
+										>
+											Les mots de passe saisis ne correspondent pas.
+										</p>
+									</ng-container>
+								</div>
 
-		<button
-			class="universignButton"
-			nbButton
-			status="primary"
-			fullWidth
-			size="large"
-			[disabled]="submitted || !resetPassForm.valid"
-			[class.btn-pulse]="submitted"
-		>
-			Enregistrement
-		</button>
-	</form>
+								<button
+									class="universignButton"
+									nbButton
+									status="primary"
+									fullWidth
+									size="large"
+									[disabled]="submitted || !resetPassForm.valid"
+									[class.btn-pulse]="submitted"
+								>
+									Enregistrement
+								</button>
+							</form>
 
-	<section class="sign-in-or-up" aria-label="Sign in or sign up">
-		<p><a class="text-link" routerLink="../login">Retour à la connexion</a></p>
-		<p><a class="text-link" routerLink="../register">S'enregistrer</a></p>
-	</section>
+							<section class="sign-in-or-up" aria-label="Sign in or sign up">
+								<p><a class="text-link" routerLink="/">Retour</a></p>
+							</section>
+						</div>
+					</nb-auth-block>
+				</nb-card-body>
+			</nb-card>
+		</nb-layout-column>
+	</nb-layout>
 </div>
