--- a/src/sass/pages/authentication.scss
+++ b/src/sass/pages/authentication.scss
@@ -1,6 +1,6 @@
 @import '../../../node_modules/@nebular/theme/styles/global/breakpoints';
 
-.authentification {
+.authentication {
 	$auth-layout-padding: 2.5rem;
 
 	& nb-card {
